top notice section complete

--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "maineri-low-firm",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "sass --watch scss:css"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Saddam6260/Maineri-Low-Firm.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Saddam6260/Maineri-Low-Firm/issues"
-  },
-  "homepage": "https://github.com/Saddam6260/Maineri-Low-Firm#readme"
+    "name": "maineri-low-firm",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "scss": "sass --watch scss:css",
+        "live-server": "browser-sync start --server --files \"css/*.css\" \".html\"",
+        "start": "concurrently \"npm run scss\" \"npm run live-server\""
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Saddam6260/Maineri-Low-Firm.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Saddam6260/Maineri-Low-Firm/issues"
+    },
+    "homepage": "https://github.com/Saddam6260/Maineri-Low-Firm#readme"
 }
